--- a/style/main_screen.css
+++ b/style/main_screen.css
@@ -60,8 +60,14 @@
 }
 
 .main__screen--wrapper__buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 1.6rem;
 }
