--- a/style/participants.css
+++ b/style/participants.css
@@ -4,8 +4,14 @@
 }
 
 .participants__wrapper--header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 6rem;
 }
@@ -13,8 +19,14 @@
 .participants__buttons--wrapper {
     width: 100%;
     max-width: 151px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
@@ -74,6 +86,8 @@
 }
 
 .participants__wrapper--content__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: row;
     align-items: center;
