--- a/style/stages.css
+++ b/style/stages.css
@@ -115,6 +115,10 @@
     border-radius: 50%;
     background-color: #d6d6d6;
     cursor: pointer;
+
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 }
 
